--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,3 +1,10 @@
+@font-face {
+   font-family: 'MyFont';
+   src: url('./NotoSansMendeKikakui-Regular.ttf') format('truetype');
+   font-weight: 600;
+   font-style: normal;
+}
+
 $body-color: rgb(0, 242, 255);
 
 *, *::before, *::after {
@@ -7,7 +14,8 @@ $body-color: rgb(0, 242, 255);
 }
 
 h1 {
-   color: $body-color;
+  color: $body-color;
+  font-family: 'MyFont';
 }
 
 #icon {
