--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -2,19 +2,17 @@
 // @import url("~boxicons");
 
 // Example of importing a font :
-// @font-face {
-//    font-family: 'MyFont';
-//    src: url('./NotoSansMendeKikakui-Regular.ttf') format('truetype');
-//    font-weight: 600;
-//    font-style: normal;
-// }
-// Then used :
-// font-family: 'MyFont';
+@font-face {
+   font-family: 'MyFont';
+   src: url('../../public/assets/fonts/NotoSansMendeKikakui-Regular.ttf') format('truetype');
+   font-weight: 600;
+   font-style: normal;
+}
 
 // Example of using an image :
 // background: url('./icon.png');
 
-$h1-color: rgb(0, 242, 255);
+$p-color: rgb(0, 242, 255);
 
 *, *::before, *::after {
    box-sizing: border-box;
@@ -22,6 +20,8 @@ $h1-color: rgb(0, 242, 255);
    padding: 0;
 }
 
-h1 {
-  color: $h1-color;
+p {
+  color: $p-color;
+  font-family: 'MyFont';
+  font-size: larger;
 }
